--- a/scm-server/pom.xml
+++ b/scm-server/pom.xml
@@ -179,7 +179,11 @@
                   <goal>deb</goal>
                   <goal>rpm</goal>
                 </goals>
-                <phase>package</phase>
+                <!--
+                disabled for pre releases.
+                TODO enable for ga.
+                -->
+                <phase>none</phase>
               </execution>
             </executions>
             <configuration>
