--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <groupId>sonia.scm</groupId>
   <artifactId>scm</artifactId>
   <packaging>pom</packaging>
-  <version>2.0.0-SNAPSHOT</version>
+  <version>2.0.0-M1</version>
   <description>
     The easiest way to share your Git, Mercurial
     and Subversion repositories over http.
@@ -36,7 +36,7 @@
     <connection>scm:hg:http://bitbucket.org/sdorra/scm-manager</connection>
     <developerConnection>scm:hg:https://bitbucket.org/sdorra/scm-manager</developerConnection>
     <url>http://bitbucket.org/sdorra/scm-manager</url>
-    <tag>HEAD</tag>
+    <tag>2.0.0-M1</tag>
   </scm>
 
   <issueManagement>
@@ -452,7 +452,7 @@
     <project.build.javaLevel>1.7</project.build.javaLevel>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <netbeans.hint.license>SCM-BSD</netbeans.hint.license>
-    <jdk.classifier/>
+    <jdk.classifier />
   </properties>
 
 </project>
