--- a/scm-clients/scm-client-impl/pom.xml
+++ b/scm-clients/scm-client-impl/pom.xml
@@ -6,13 +6,13 @@
   <parent>
     <groupId>sonia.scm.clients</groupId>
     <artifactId>scm-clients</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.0-M1</version>
   </parent>
 
   <groupId>sonia.scm.clients</groupId>
   <artifactId>scm-client-impl</artifactId>
   <packaging>jar</packaging>
-  <version>2.0.0-SNAPSHOT</version>
+  <version>2.0.0-M1</version>
   <name>scm-client-impl</name>
   
   <dependencies>
@@ -36,7 +36,7 @@
     <dependency>
       <groupId>sonia.scm.clients</groupId>
       <artifactId>scm-client-api</artifactId>
-      <version>2.0.0-SNAPSHOT</version>
+      <version>2.0.0-M1</version>
     </dependency>
     
     <dependency>
@@ -70,7 +70,7 @@
     <dependency>
       <groupId>sonia.scm</groupId>
       <artifactId>scm-test</artifactId>
-      <version>2.0.0-SNAPSHOT</version>
+      <version>2.0.0-M1</version>
       <scope>test</scope>
     </dependency>
     
