--- a/scm-server/pom.xml
+++ b/scm-server/pom.xml
@@ -6,12 +6,12 @@
   <parent>
     <artifactId>scm</artifactId>
     <groupId>sonia.scm</groupId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.0-M1</version>
   </parent>
 
   <groupId>sonia.scm</groupId>
   <artifactId>scm-server</artifactId>
-  <version>2.0.0-SNAPSHOT</version>
+  <version>2.0.0-M1</version>
   <name>scm-server</name>
   <packaging>jar</packaging>
 
