--- a/scm-webapp/pom.xml
+++ b/scm-webapp/pom.xml
@@ -6,13 +6,13 @@
   <parent>
     <groupId>sonia.scm</groupId>
     <artifactId>scm</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>2.0.0-M1</version>
   </parent>
 
   <groupId>sonia.scm</groupId>
   <artifactId>scm-webapp</artifactId>
   <packaging>war</packaging>
-  <version>2.0.0-SNAPSHOT</version>
+  <version>2.0.0-M1</version>
   <name>scm-webapp</name>
 
   <dependencies>
@@ -22,7 +22,7 @@
     <dependency>
       <groupId>sonia.scm</groupId>
       <artifactId>scm-annotation-processor</artifactId>
-      <version>2.0.0-SNAPSHOT</version>
+      <version>2.0.0-M1</version>
       <scope>provided</scope>
     </dependency>
     
@@ -47,13 +47,13 @@
     <dependency>
       <groupId>sonia.scm</groupId>
       <artifactId>scm-core</artifactId>
-      <version>2.0.0-SNAPSHOT</version>
+      <version>2.0.0-M1</version>
     </dependency>
     
     <dependency>
       <groupId>sonia.scm</groupId>
       <artifactId>scm-dao-xml</artifactId>
-      <version>2.0.0-SNAPSHOT</version>
+      <version>2.0.0-M1</version>
     </dependency>
 
     <!-- security -->
@@ -227,7 +227,7 @@
     <dependency>
       <groupId>sonia.scm</groupId>
       <artifactId>scm-test</artifactId>
-      <version>2.0.0-SNAPSHOT</version>
+      <version>2.0.0-M1</version>
       <scope>test</scope>
       <exclusions>
         <exclusion>
@@ -240,7 +240,7 @@
     <dependency>
       <groupId>sonia.scm.plugins</groupId>
       <artifactId>scm-git-plugin</artifactId>
-      <version>2.0.0-SNAPSHOT</version>
+      <version>2.0.0-M1</version>
       <classifier>tests</classifier>
       <scope>test</scope>
     </dependency>
@@ -248,7 +248,7 @@
     <dependency>
       <groupId>sonia.scm.plugins</groupId>
       <artifactId>scm-hg-plugin</artifactId>
-      <version>2.0.0-SNAPSHOT</version>
+      <version>2.0.0-M1</version>
       <classifier>tests</classifier>
       <scope>test</scope>
     </dependency>
@@ -256,7 +256,7 @@
     <dependency>
       <groupId>sonia.scm.plugins</groupId>
       <artifactId>scm-svn-plugin</artifactId>
-      <version>2.0.0-SNAPSHOT</version>
+      <version>2.0.0-M1</version>
       <classifier>tests</classifier>
       <scope>test</scope>
     </dependency>
