--- a/scm-annotation-processor/pom.xml
+++ b/scm-annotation-processor/pom.xml
@@ -6,12 +6,12 @@
   <parent>
     <groupId>sonia.scm</groupId>
     <artifactId>scm</artifactId>
-    <version>2.0.0-M1</version>
+    <version>2.0.0-SNAPSHOT</version>
   </parent>
   
   <groupId>sonia.scm</groupId>
   <artifactId>scm-annotation-processor</artifactId>
-  <version>2.0.0-M1</version>
+  <version>2.0.0-SNAPSHOT</version>
   <name>scm-annotation-processor</name>
   
   <dependencies>
@@ -21,7 +21,7 @@
     <dependency>
       <groupId>sonia.scm</groupId>
       <artifactId>scm-annotations</artifactId>
-      <version>2.0.0-M1</version>
+      <version>2.0.0-SNAPSHOT</version>
     </dependency>
     
     <!-- rest api -->
