--- a/scm-annotations/pom.xml
+++ b/scm-annotations/pom.xml
@@ -6,12 +6,12 @@
   <parent>
     <groupId>sonia.scm</groupId>
     <artifactId>scm</artifactId>
-    <version>2.0.0-M1</version>
+    <version>2.0.0-SNAPSHOT</version>
   </parent>
   
   <groupId>sonia.scm</groupId>
   <artifactId>scm-annotations</artifactId>
-  <version>2.0.0-M1</version>
+  <version>2.0.0-SNAPSHOT</version>
   <name>scm-annotations</name>
   
   <dependencies>
