--- a/scm-clients/scm-cli-client/pom.xml
+++ b/scm-clients/scm-cli-client/pom.xml
@@ -6,12 +6,12 @@
   <parent>
     <artifactId>scm-clients</artifactId>
     <groupId>sonia.scm.clients</groupId>
-    <version>2.0.0-M1</version>
+    <version>2.0.0-SNAPSHOT</version>
   </parent>
 
   <groupId>sonia.scm.clients</groupId>
   <artifactId>scm-cli-client</artifactId>
-  <version>2.0.0-M1</version>
+  <version>2.0.0-SNAPSHOT</version>
   <name>scm-cli-client</name>
 
   <dependencies>
@@ -34,7 +34,7 @@
     <dependency>
       <groupId>sonia.scm.clients</groupId>
       <artifactId>scm-client-impl</artifactId>
-      <version>2.0.0-M1</version>
+      <version>2.0.0-SNAPSHOT</version>
     </dependency>
 
     <dependency>
