--- a/scm-plugins/pom.xml
+++ b/scm-plugins/pom.xml
@@ -6,13 +6,13 @@
   <parent>
     <groupId>sonia.scm</groupId>
     <artifactId>scm</artifactId>
-    <version>2.0.0-M1</version>
+    <version>2.0.0-SNAPSHOT</version>
   </parent>
 
   <groupId>sonia.scm.plugins</groupId>
   <artifactId>scm-plugins</artifactId>
   <packaging>pom</packaging>
-  <version>2.0.0-M1</version>
+  <version>2.0.0-SNAPSHOT</version>
   <name>scm-plugins</name>
 
   <modules>
@@ -33,7 +33,7 @@
     <dependency>
       <groupId>sonia.scm</groupId>
       <artifactId>scm-core</artifactId>
-      <version>2.0.0-M1</version>
+      <version>2.0.0-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
     
@@ -42,7 +42,7 @@
     <dependency>
       <groupId>sonia.scm</groupId>
       <artifactId>scm-annotation-processor</artifactId>
-      <version>2.0.0-M1</version>
+      <version>2.0.0-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
     
@@ -51,7 +51,7 @@
     <dependency>
       <groupId>sonia.scm</groupId>
       <artifactId>scm-test</artifactId>
-      <version>2.0.0-M1</version>
+      <version>2.0.0-SNAPSHOT</version>
       <scope>test</scope>
     </dependency>
 
