--- a/pom.xml
+++ b/pom.xml
@@ -439,7 +439,7 @@
     <shiro.version>1.2.3</shiro.version>
 
     <!-- repostitory libraries -->
-    <jgit.version>3.5.3.201412180710-r</jgit.version>
+    <jgit.version>3.5.3.201412180710-r-scm1</jgit.version>
     <svnkit.version>1.8.5-scm2</svnkit.version>
 
     <!-- util libraries -->
