--- a/scm-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/scm-webapp/src/main/webapp/WEB-INF/web.xml
@@ -48,12 +48,12 @@
     </listener>
 
     <filter>
-        <filter-name>guiceFilter</filter-name>
-        <filter-class>com.google.inject.servlet.GuiceFilter</filter-class>
+        <filter-name>BootstrapFilter</filter-name>
+        <filter-class>sonia.scm.boot.BootstrapContextFilter</filter-class>
     </filter>
 
     <filter-mapping>
-        <filter-name>guiceFilter</filter-name>
+        <filter-name>BootstrapFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
