--- a/pom.xml
+++ b/pom.xml
@@ -233,7 +233,7 @@
         <artifactId>maven-source-plugin</artifactId>
         <version>2.2.1</version>
       </plugin>
-      
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-clean-plugin</artifactId>
@@ -275,7 +275,7 @@
         <artifactId>maven-eclipse-plugin</artifactId>
         <version>2.6</version>
       </plugin>
-      
+
       <!-- reporting -->
 
       <plugin>
@@ -357,16 +357,6 @@
     </profile>
 
     <profile>
-      <id>JDK7</id>
-      <activation>
-        <jdk>1.7</jdk>
-      </activation>
-      <properties>
-        <jdk.classifier>-jdk7</jdk.classifier>
-      </properties>
-    </profile>
-
-    <profile>
       <id>APIviz</id>
       <activation>
         <property>
@@ -386,8 +376,8 @@
               <doclet>org.jboss.apiviz.APIviz</doclet>
               <docletArtifact>
                 <groupId>org.jboss.apiviz</groupId>
-                <artifactId>apiviz${jdk.classifier}</artifactId>
-                <version>1.3.1.GA</version>
+                <artifactId>apiviz</artifactId>
+                <version>1.3.2.GA</version>
               </docletArtifact>
               <additionalparam>
                 -sourceclasspath ${project.build.outputDirectory}
