--- a/scm-webapp/pom.xml
+++ b/scm-webapp/pom.xml
@@ -69,6 +69,12 @@
       <artifactId>shiro-guice</artifactId>
       <version>${shiro.version}</version>
     </dependency>
+    
+    <dependency>
+      <groupId>io.jsonwebtoken</groupId>
+      <artifactId>jjwt</artifactId>
+      <version>0.4</version>
+    </dependency>
 
     <!-- rest api -->
 
