--- a/scm-core/pom.xml
+++ b/scm-core/pom.xml
@@ -113,6 +113,15 @@
       <version>2.0.0-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
+    
+    <!-- test -->
+    
+    <dependency>
+      <groupId>com.github.sdorra</groupId>
+      <artifactId>shiro-unit</artifactId>
+      <version>1.0.0</version>
+      <scope>test</scope>
+    </dependency>
 
   </dependencies>
   
