--- a/scm-webapp/pom.xml
+++ b/scm-webapp/pom.xml
@@ -6,13 +6,13 @@
   <parent>
     <groupId>sonia.scm</groupId>
     <artifactId>scm</artifactId>
-    <version>1.46-SNAPSHOT</version>
+    <version>1.46</version>
   </parent>
 
   <groupId>sonia.scm</groupId>
   <artifactId>scm-webapp</artifactId>
   <packaging>war</packaging>
-  <version>1.46-SNAPSHOT</version>
+  <version>1.46</version>
   <name>scm-webapp</name>
 
   <dependencies>
@@ -38,31 +38,31 @@
     <dependency>
       <groupId>sonia.scm</groupId>
       <artifactId>scm-core</artifactId>
-      <version>1.46-SNAPSHOT</version>
+      <version>1.46</version>
     </dependency>
     
     <dependency>
       <groupId>sonia.scm</groupId>
       <artifactId>scm-dao-xml</artifactId>
-      <version>1.46-SNAPSHOT</version>
+      <version>1.46</version>
     </dependency>
 
     <dependency>
       <groupId>sonia.scm.plugins</groupId>
       <artifactId>scm-hg-plugin</artifactId>
-      <version>1.46-SNAPSHOT</version>
+      <version>1.46</version>
     </dependency>
 
     <dependency>
       <groupId>sonia.scm.plugins</groupId>
       <artifactId>scm-svn-plugin</artifactId>
-      <version>1.46-SNAPSHOT</version>
+      <version>1.46</version>
     </dependency>
 
     <dependency>
       <groupId>sonia.scm.plugins</groupId>
       <artifactId>scm-git-plugin</artifactId>
-      <version>1.46-SNAPSHOT</version>
+      <version>1.46</version>
     </dependency>
     
     <!-- security -->
@@ -274,7 +274,7 @@
     <dependency>
       <groupId>sonia.scm</groupId>
       <artifactId>scm-test</artifactId>
-      <version>1.46-SNAPSHOT</version>
+      <version>1.46</version>
       <scope>test</scope>
       <exclusions>
         <exclusion>
@@ -287,7 +287,7 @@
     <dependency>
       <groupId>sonia.scm.plugins</groupId>
       <artifactId>scm-git-plugin</artifactId>
-      <version>1.46-SNAPSHOT</version>
+      <version>1.46</version>
       <classifier>tests</classifier>
       <scope>test</scope>
     </dependency>
@@ -295,7 +295,7 @@
     <dependency>
       <groupId>sonia.scm.plugins</groupId>
       <artifactId>scm-hg-plugin</artifactId>
-      <version>1.46-SNAPSHOT</version>
+      <version>1.46</version>
       <classifier>tests</classifier>
       <scope>test</scope>
     </dependency>
@@ -303,7 +303,7 @@
     <dependency>
       <groupId>sonia.scm.plugins</groupId>
       <artifactId>scm-svn-plugin</artifactId>
-      <version>1.46-SNAPSHOT</version>
+      <version>1.46</version>
       <classifier>tests</classifier>
       <scope>test</scope>
     </dependency>
@@ -529,7 +529,7 @@
         <dependency>
           <groupId>sonia.scm</groupId>
           <artifactId>scm-dao-orientdb</artifactId>
-          <version>1.46-SNAPSHOT</version>
+          <version>1.46</version>
         </dependency>
         
       </dependencies>
