--- a/scm-server/pom.xml
+++ b/scm-server/pom.xml
@@ -75,7 +75,7 @@
                 <daemon>
 
                   <id>scm-server</id>
-                  <version>${commons.daemon.version}</version>
+                  <version>${commons.daemon.native.version}</version>
                   <mainClass>sonia.scm.server.ScmServerDaemon</mainClass>
                   <platforms>
                     <platform>commons-daemon</platform>
@@ -178,7 +178,7 @@
           <plugin>
             <groupId>com.github.sdorra</groupId>
             <artifactId>nativepkg-maven-plugin</artifactId>
-            <version>1.1.2</version>
+            <version>1.1.3</version>
             <executions>
               <execution>
                 <goals>
@@ -308,6 +308,7 @@
 
   <properties>
     <commons.daemon.version>1.0.15</commons.daemon.version>
+    <commons.daemon.native.version>1.0.15.1</commons.daemon.native.version>
     <exploded.directory>${project.build.directory}/appassembler/commons-daemon/scm-server</exploded.directory>
   </properties>
 
