--- a/pom.xml
+++ b/pom.xml
@@ -423,7 +423,8 @@
     <jersey.version>1.19</jersey.version>
     <ehcache.version>2.6.6</ehcache.version>
     <freemarker.version>2.3.20</freemarker.version>
-    <jetty.version>7.6.16.v20140903</jetty.version>
+    <jetty.version>7.6.18.v20150929</jetty.version>
+    <jetty.maven.version>7.6.16.v20140903</jetty.maven.version>
 
     <!-- security libraries -->
     <shiro.version>1.2.3</shiro.version>
