--- a/scm-webapp/pom.xml
+++ b/scm-webapp/pom.xml
@@ -466,7 +466,7 @@
       <plugin>
         <groupId>org.mortbay.jetty</groupId>
         <artifactId>jetty-maven-plugin</artifactId>
-        <version>${jetty.version}</version>
+        <version>${jetty.maven.version}</version>
         <configuration>
           <stopPort>8005</stopPort>
           <stopKey>STOP</stopKey>
@@ -617,7 +617,7 @@
           <plugin>
             <groupId>org.mortbay.jetty</groupId>
             <artifactId>jetty-maven-plugin</artifactId>
-            <version>${jetty.version}</version>
+            <version>${jetty.maven.version}</version>
             <configuration>
               <stopPort>8085</stopPort>
               <stopKey>STOP</stopKey>
@@ -697,7 +697,7 @@
           <plugin>
             <groupId>org.mortbay.jetty</groupId>
             <artifactId>jetty-maven-plugin</artifactId>
-            <version>${jetty.version}</version>
+            <version>${jetty.maven.version}</version>
             <configuration>
               <stopPort>8086</stopPort>
               <stopKey>STOP</stopKey>
