--- a/scm-webapp/pom.xml
+++ b/scm-webapp/pom.xml
@@ -190,6 +190,18 @@
       <version>${guava.version}</version>
     </dependency>
     
+    <dependency>
+      <groupId>org.quartz-scheduler</groupId>
+      <artifactId>quartz</artifactId>
+      <version>${quartz.version}</version>
+      <exclusions>
+        <exclusion>
+          <artifactId>c3p0</artifactId>
+          <groupId>c3p0</groupId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    
     <!-- fix version conflict -->
     
     <dependency>
