--- a/scm-clients/scm-client-api/pom.xml
+++ b/scm-clients/scm-client-api/pom.xml
@@ -6,13 +6,13 @@
   <parent>
     <groupId>sonia.scm.clients</groupId>
     <artifactId>scm-clients</artifactId>
-    <version>1.47</version>
+    <version>1.48-SNAPSHOT</version>
   </parent>
 
   <groupId>sonia.scm.clients</groupId>
   <artifactId>scm-client-api</artifactId>
   <packaging>jar</packaging>
-  <version>1.47</version>
+  <version>1.48-SNAPSHOT</version>
   <name>scm-client-api</name>
   
   <dependencies>
