--- a/scm-webapp/pom.xml
+++ b/scm-webapp/pom.xml
@@ -348,6 +348,12 @@
       <scope>test</scope>
     </dependency>
     
+    <dependency>
+      <groupId>com.github.sdorra</groupId>
+      <artifactId>shiro-unit</artifactId>
+      <version>1.0.0</version>
+    </dependency>
+    
     <!-- global excludes -->
     
     <dependency>
