added RepositoryHookITCase to test repository post receive hooks

--- a/scm-webapp/pom.xml
+++ b/scm-webapp/pom.xml
@@ -644,6 +644,10 @@
                   <name>scm.home</name>
                   <value>target/scm-it</value>
                 </systemProperty>
+                <systemProperty>
+                  <name>scm.stage</name>
+                  <value>${scm.stage}</value>
+                </systemProperty>
               </systemProperties>
               <connectors>
                 <connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
