--- a/scm-webapp/pom.xml
+++ b/scm-webapp/pom.xml
@@ -326,11 +326,18 @@
       <version>${selenium.version}</version>
       <scope>test</scope>
     </dependency>
-    
+
     <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
       <artifactId>selenium-firefox-driver</artifactId>
       <version>${selenium.version}</version>
+      <scope>test</scope>
+    </dependency>
+    
+    <dependency>
+      <groupId>org.seleniumhq.selenium</groupId>
+      <artifactId>htmlunit-driver</artifactId>
+      <version>2.21</version>
       <scope>test</scope>
     </dependency>
 
@@ -528,7 +535,7 @@
     <scm.stage>DEVELOPMENT</scm.stage>
     <scm.home>target/scm-it</scm.home>
     <environment.profile>default</environment.profile>
-    <selenium.version>2.28.0</selenium.version>
+    <selenium.version>2.53.1</selenium.version>
     <enunciate.version>1.31</enunciate.version>
     <aether.version>1.13.1</aether.version>
     <wagon.version>1.0</wagon.version>
@@ -687,6 +694,24 @@
     
     <profile>
       <id>selenium</id>
+          
+      <dependencies>
+        
+        <dependency>
+          <groupId>org.apache.httpcomponents</groupId>
+          <artifactId>httpclient</artifactId>
+          <version>4.3.2</version>
+          <scope>test</scope>
+        </dependency>
+        
+        <dependency>
+          <groupId>xml-apis</groupId>
+          <artifactId>xml-apis</artifactId>
+          <version>1.4.01</version>
+          <scope>test</scope>
+        </dependency>
+        
+      </dependencies>
           
       <build>
         <plugins>
