added test coverage

--- a/pom.xml
+++ b/pom.xml
@@ -306,6 +306,28 @@
         <version>2.6</version>
       </plugin>
       
+      <!-- code coverage -->
+      
+      <plugin>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+        <version>0.7.7.201606060606</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>prepare-agent</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>report</id>
+            <phase>prepare-package</phase>
+            <goals>
+              <goal>report</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      
       <!-- reporting -->
 
       <plugin>
