--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,15 @@
       <name>scm-manager release repository</name>
       <url>http://maven.scm-manager.org/nexus/content/groups/public</url>
     </repository>
+    
+    <repository>
+      <id>ossrh</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+      <snapshots>
+        <enabled>true</enabled>
+        <updatePolicy>daily</updatePolicy>
+      </snapshots>
+    </repository>
 
   </repositories>
 
@@ -493,6 +502,7 @@
     <jetty.version>9.2.10.v20150310</jetty.version>
 
     <!-- security libraries -->
+    <ssp.version>1.0.0-SNAPSHOT</ssp.version>
     <shiro.version>1.2.3</shiro.version>
 
     <!-- repostitory libraries -->
