--- a/scm-webapp/pom.xml
+++ b/scm-webapp/pom.xml
@@ -244,6 +244,13 @@
     </dependency>
     
     <dependency>
+      <groupId>com.github.sdorra</groupId>
+      <artifactId>shiro-unit</artifactId>
+      <version>1.0.0</version>
+      <scope>test</scope>
+    </dependency>
+    
+    <dependency>
       <groupId>sonia.scm.plugins</groupId>
       <artifactId>scm-git-plugin</artifactId>
       <version>2.0.0-SNAPSHOT</version>
