improve unit tests of DefaultRepositoryManager

--- a/scm-webapp/src/test/resources/sonia/scm/repository/shiro.ini
+++ b/scm-webapp/src/test/resources/sonia/scm/repository/shiro.ini
@@ -1,5 +1,11 @@
 [users]
 trillian = secret, admin
+dent = secret, creator, heartOfGold, puzzle42
+unpriv = secret
+crato = secret, creator
 
 [roles]
 admin = *
+creator = repository:create
+heartOfGold = "repository:read,modify,delete:hof"
+puzzle42 = "repository:read,write:p42"
