update svnkit to version 1.8.14-scm1 in order to support subversion 1.9 new fsfs repository format

--- a/scm-plugins/scm-svn-plugin/pom.xml
+++ b/scm-plugins/scm-svn-plugin/pom.xml
@@ -78,6 +78,12 @@
   <repositories>
     
     <repository>
+      <id>maven.tmatesoft.com</id>
+      <name>tmatesoft release repository</name>
+      <url>https://maven.tmatesoft.com/content/repositories/releases</url>
+    </repository>
+      
+    <repository>
       <id>maven.scm-manager.org</id>
       <name>scm-manager release repository</name>
       <url>http://maven.scm-manager.org/nexus/content/groups/public</url>
