--- a/scm-test/pom.xml
+++ b/scm-test/pom.xml
@@ -64,9 +64,15 @@
 
   </dependencies>
   
-  <!-- for jgit -->
+  <!-- for svnkit and jgit -->
   
   <repositories>
+      
+    <repository>
+      <id>maven.tmatesoft.com</id>
+      <name>tmatesoft release repository</name>
+      <url>https://maven.tmatesoft.com/content/repositories/releases</url>
+    </repository>
     
     <repository>
       <id>jgit-repository</id>
