modify rest api assembly to match packaging before enunciate upgrade

--- a/scm-webapp/pom.xml
+++ b/scm-webapp/pom.xml
@@ -864,7 +864,7 @@
             </executions>
             <configuration>
               <configFile>${project.build.directory}/enunciate.xml</configFile>
-              <docsDir>${project.build.directory}/restdocs</docsDir>
+              <docsDir>${project.build.directory}</docsDir>
             </configuration>
             <dependencies>
               <dependency>
