ignore some falsepositive sonarqube issues

--- a/scm-plugin-backend/pom.xml
+++ b/scm-plugin-backend/pom.xml
@@ -111,6 +111,10 @@
 
   </dependencies>
 
+  <properties>
+    <sonar.exclusions>src/main/webapp/template/**</sonar.exclusions>
+  </properties>
+
   <build>
 
     <plugins>
