remove work directory after package upgrade, see #923

--- a/scm-server/pom.xml
+++ b/scm-server/pom.xml
@@ -205,6 +205,7 @@
               </platform>
               <scripts>
                 <preInstall>${project.basedir}/src/main/nativepkg/create-user</preInstall>
+                <postInstall>${project.basedir}/src/main/nativepkg/clear-cache</postInstall>
               </scripts>
               <mappings>
                 <files>
