--- a/scm-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/scm-webapp/src/main/webapp/WEB-INF/web.xml
@@ -37,32 +37,60 @@
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" 
          metadata-complete="true">
     
-    <display-name>SCM-Manager ${project.version}</display-name>
+  <display-name>SCM-Manager ${project.version}</display-name>
 
-    <listener>
-      <listener-class>sonia.scm.boot.BootstrapContextListener</listener-class>
-    </listener>
-    
-    <listener>
-      <listener-class>sonia.scm.HttpSessionListenerHolder</listener-class>
-    </listener>
+  <!-- bootstraping -->
 
-    <filter>
-        <filter-name>BootstrapFilter</filter-name>
-        <filter-class>sonia.scm.boot.BootstrapContextFilter</filter-class>
-    </filter>
+  <listener>
+    <listener-class>sonia.scm.boot.BootstrapContextListener</listener-class>
+  </listener>
 
-    <filter-mapping>
-        <filter-name>BootstrapFilter</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
+  <filter>
+    <filter-name>BootstrapFilter</filter-name>
+    <filter-class>sonia.scm.boot.BootstrapContextFilter</filter-class>
+  </filter>
 
-    <welcome-file-list>
-        <welcome-file>index.html</welcome-file>
-    </welcome-file-list>
+  <filter-mapping>
+    <filter-name>BootstrapFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+  
+  <!-- rest -->
+  
+  <context-param>
+    <param-name>resteasy.servlet.mapping.prefix</param-name>
+    <param-value>/api/rest</param-value>
+  </context-param>
 
-    <session-config>
-        <session-timeout>30</session-timeout>
-    </session-config>
+  <servlet>
+    <servlet-name>Resteasy</servlet-name>
+    <servlet-class>
+      org.jboss.resteasy.plugins.server.servlet.HttpServletDispatcher
+    </servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>Resteasy</servlet-name>
+    <url-pattern>/api/rest/*</url-pattern>
+  </servlet-mapping>
+  
+  <!-- capture sessions -->
+  <!-- 
+  TODO remove, we need no longer a session
+  -->
+  
+  <listener>
+    <listener-class>sonia.scm.HttpSessionListenerHolder</listener-class>
+  </listener>
+
+  <!-- basic configuration -->
+
+  <welcome-file-list>
+    <welcome-file>index.html</welcome-file>
+  </welcome-file-list>
+
+  <session-config>
+    <session-timeout>30</session-timeout>
+  </session-config>
     
 </web-app>
