update javahg to version 0.13

--- a/scm-plugins/scm-hg-plugin/pom.xml
+++ b/scm-plugins/scm-hg-plugin/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-      
+
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
@@ -24,11 +24,11 @@
       <version>${servlet.version}</version>
       <scope>provided</scope>
     </dependency>
-    
+
     <dependency>
       <groupId>com.aragost.javahg</groupId>
       <artifactId>javahg</artifactId>
-      <version>0.8-scm1</version>
+      <version>0.13</version>
       <exclusions>
         <exclusion>
           <groupId>com.google.guava</groupId>
@@ -47,12 +47,12 @@
     </dependency>
 
   </dependencies>
-  
+
   <!-- create test jar -->
-  
+
   <build>
     <plugins>
-      
+
       <plugin>
         <groupId>com.mycila.maven-license-plugin</groupId>
         <artifactId>maven-license-plugin</artifactId>
@@ -71,7 +71,7 @@
           <strictCheck>true</strictCheck>
         </configuration>
       </plugin>
-        
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
@@ -84,18 +84,18 @@
           </execution>
         </executions>
       </plugin>
-        
+
     </plugins>
   </build>
-  
+
   <repositories>
-    
+
     <repository>
       <id>maven.scm-manager.org</id>
       <name>scm-manager release repository</name>
       <url>http://maven.scm-manager.org/nexus/content/groups/public</url>
     </repository>
-    
+
     <repository>
       <releases>
         <enabled>false</enabled>
@@ -108,7 +108,7 @@
       <layout>default</layout>
       <url>https://oss.sonatype.org/content/groups/public/</url>
     </repository>
-  
+
   </repositories>
- 
+
 </project>
