--- a/pom.xml
+++ b/pom.xml
@@ -137,7 +137,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>animal-sniffer-maven-plugin</artifactId>
-        <version>1.15</version>
+        <version>1.16</version>
         <configuration>
           <signature>
             <groupId>org.codehaus.mojo.signature</groupId>
@@ -360,7 +360,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-javadoc-plugin</artifactId>
-            <version>2.8.1</version>
+            <version>3.0.0</version>
             <configuration>
               <doclet>org.jboss.apiviz.APIviz</doclet>
               <docletArtifact>
@@ -448,6 +448,32 @@
         <version>${jackson.version}</version>
       </dependency>
 
+      <!-- xml -->
+
+      <dependency>
+        <groupId>javax.xml.bind</groupId>
+        <artifactId>jaxb-api</artifactId>
+        <version>${jaxb.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>com.sun.xml.bind</groupId>
+        <artifactId>jaxb-impl</artifactId>
+        <version>${jaxb.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.glassfish.jaxb</groupId>
+        <artifactId>jaxb-runtime</artifactId>
+        <version>${jaxb.version}</version>
+      </dependency>
+
+      <dependency>
+        <groupId>javax.activation</groupId>
+        <artifactId>activation</artifactId>
+        <version>1.1.1</version>
+      </dependency>
+
     </dependencies>
   </dependencyManagement>
 
@@ -484,6 +510,7 @@
     <jetty.version>7.6.21.v20160908</jetty.version>
     <jetty.maven.version>7.6.16.v20140903</jetty.maven.version>
     <jackson.version>1.9.13</jackson.version>
+    <jaxb.version>2.3.0</jaxb.version>
 
     <!-- security libraries -->
     <shiro.version>1.3.2</shiro.version>
