--- a/scm-core/pom.xml
+++ b/scm-core/pom.xml
@@ -142,6 +142,20 @@
             <link>http://www.slf4j.org/api/</link>
             <link>http://shiro.apache.org/static/current/apidocs/</link>
           </links>
+          <doclet>org.jboss.apiviz.APIviz</doclet>
+          <docletArtifact>
+            <groupId>org.jboss.apiviz</groupId>
+            <artifactId>apiviz</artifactId>
+            <version>1.3.2.GA</version>
+          </docletArtifact>
+          <additionalOptions>
+            <additionalOption>
+              -sourceclasspath ${project.build.outputDirectory}
+            </additionalOption>
+            <additionalOption>
+              -nopackagediagram
+            </additionalOption>
+          </additionalOptions>
         </configuration>
       </plugin>
 
